feat: fix seat map saving, update vnpay flow, holdBy info and LAN IP config